Remove ModLauncher module, general test cleanup (#16)
Co-authored-by: Matyrobbrt <matyrobbrt@gmail.com>
Co-authored-by: Matyrobbrt <65940752+Matyrobbrt@users.noreply.github.com>