@@ -53,10 +53,6 @@ group 'net.neoforged'
 
 println('Version: ' + version)
 
-sourceSets {
-    testJars
-}
-
 jar.manifest = manifest {
     attributes([
             'Specification-Title': 'accesstransformers',
@@ -69,53 +65,28 @@ jar.manifest = manifest {
     ])
 }
 
-tasks.register('testsJar', Jar) {
-    archiveClassifier = 'testsjar'
-    from sourceSets.testJars.output
-}
-
 changelog {
     from '10.0'
 }
-
-build.dependsOn testsJar
 
 dependencies {
     testImplementation(libs.junit.api)
     testImplementation(libs.powermock)
     testImplementation(libs.assert4j)
-    testImplementation(libs.bsl)
-    testImplementation(libs.sjh)
     testImplementation(libs.gson)
-    testImplementation(project(':modlauncher'))
-    testImplementation(libs.jopt5)
     testImplementation(libs.bundles.log4j)
     testRuntimeOnly(libs.junit.engine)
+
+    testCompileOnly(libs.annotations)
 
     api(libs.slf4j)
     api(libs.bundles.asm)
     api(project(':parser'))
 }
 
-// Build the module path manually because Gradle won't do it for non-modular projects.
-// Feel free to replace by a better way, I just wanted the tests to run.
-import java.util.stream.Collectors
-def buildModulePath() {
-    project.configurations.testRuntimeClasspath.resolve()*.toString().stream().filter {
-        it.contains('asm') || it.contains('modlauncher') || it.contains('bootstraplauncher') || it.contains('securejarhandler')
-    }.collect(Collectors.joining(File.pathSeparator))
-}
-
 test {
     useJUnitPlatform()
-    forkEvery 1
-    jvmArgs(
-            '--add-opens', 'java.base/java.lang.invoke=cpw.mods.securejarhandler',
-            '-p', buildModulePath()
-    )
 }
-
-test.dependsOn(testJarsClasses)
 
 publishing {
     publications {
